feat(sections): edit section info endpoint
